add solutions for maybe another monoid

--- a/haskell-programming-solutions.cabal
+++ b/haskell-programming-solutions.cabal
@@ -23,6 +23,8 @@ library
                      , Ch11.Vigenere
                      , Ch13.Hangman
                      , Ch14.Morse
+                     , Ch15.Optional
+                     , Ch15.QuickChecking
                      , Utils
 
 source-repository head
