--- a/haskell-programming-solutions.cabal
+++ b/haskell-programming-solutions.cabal
@@ -17,6 +17,7 @@ library
                      , hspec
                      , QuickCheck
                      , random
+                     , checkers
                      , containers
   default-language:    Haskell2010
   exposed-modules:     Ch09.Caesar
@@ -27,6 +28,7 @@ library
                      , Ch15.QuickChecking
                      , Ch15.Semigroups
                      , Ch16.FunctorLaws
+                     , Ch17.List
                      , Utils
 
 source-repository head
