add chapter 18 solutions

--- a/haskell-programming-solutions.cabal
+++ b/haskell-programming-solutions.cabal
@@ -29,6 +29,7 @@ library
                      , Ch15.Semigroups
                      , Ch16.FunctorLaws
                      , Ch17.List
+                     , Ch18.ChapterExercises
                      , Utils
 
 source-repository head
