--- a/haskell-programming-solutions.cabal
+++ b/haskell-programming-solutions.cabal
@@ -19,6 +19,13 @@ library
                      , random
                      , checkers
                      , containers
+                     , bytestring
+                     , text
+                     , hedis
+                     , scotty
+                     , network-uri
+                     , mtl
+                     , transformers
   default-language:    Haskell2010
   exposed-modules:     Ch09.Caesar
                      , Ch11.Vigenere
