--- a/haskell-programming-solutions.cabal
+++ b/haskell-programming-solutions.cabal
@@ -25,6 +25,7 @@ library
                      , scotty
                      , network-uri
                      , mtl
+                     , dlist
                      , transformers
   default-language:    Haskell2010
   exposed-modules:     Ch09.Caesar
