begin chapter 24 solutions

--- a/haskell-programming-solutions.cabal
+++ b/haskell-programming-solutions.cabal
@@ -21,6 +21,8 @@ library
                      , containers
                      , bytestring
                      , text
+                     , trifecta
+                     , parsers
                      , hedis
                      , scotty
                      , network-uri
