first stab at log parser

--- a/haskell-programming-solutions.cabal
+++ b/haskell-programming-solutions.cabal
@@ -26,6 +26,8 @@ library
                      , hedis
                      , scotty
                      , network-uri
+                     , raw-strings-qq
+                     , time
                      , mtl
                      , dlist
                      , transformers
