add LiftIO instances

--- a/haskell-programming-solutions.cabal
+++ b/haskell-programming-solutions.cabal
@@ -21,6 +21,7 @@ library
                      , containers
                      , bytestring
                      , text
+                     , either
                      , trifecta
                      , parsers
                      , hedis
